--- a/index.html
+++ b/index.html
@@ -932,31 +932,44 @@
 				// Load checkpoints from the JSON file
 				const locations = await fetchJSONFile(checkpointsSource, cachedCheckpoints);
 
-				while (!moveToNextLocation && currentLocationIndex < locations.length) {
+				while (currentLocationIndex < locations.length) {
 					const location = locations[currentLocationIndex];
 					const checkpointSets = Object.keys(location.checkpoints); // Get all checkpoint sets
-					const currentCheckpointSet = checkpointSets[0]; // Get the name of the first checkpoint set
-					const checkpoints = location.checkpoints[currentCheckpointSet];// Get the first set of checkpoints
-					for (const checkpoint of checkpoints) {
-						const distance = calculateDistance(latitude, longitude, checkpoint.latitude, checkpoint.longitude);
-						console.log('Current index:', currentLocationIndex);
-						console.log('Checkpoint Set Name:', currentCheckpointSet);
-			      		console.log('Checkpoint Latitude:', checkpoint.latitude);
-			       		console.log('Checkpoint Longitude:', checkpoint.longitude);
-			         	console.log('Distance:', distance);
-						if (distance <= radius) {
-							console.log('Checkpoint reached:', checkpoint.text);
-							moveToNextLocation = true; // Set flag to move to next location
-							break; // Exit the loop if a checkpoint is reached
+
+					for (const checkpointSet of checkpointSets) {
+						const checkpoints = location.checkpoints[checkpointSet]; // Get the checkpoints from the set
+
+						for (const checkpoint of checkpoints) {
+							const distance = calculateDistance(latitude, longitude, checkpoint.latitude, checkpoint.longitude);
+							console.log('Current index:', currentLocationIndex);
+							console.log('Checkpoint Set Name:', checkpointSet);
+							console.log('Checkpoint Latitude:', checkpoint.latitude);
+							console.log('Checkpoint Longitude:', checkpoint.longitude);
+							console.log('Distance:', distance);
+							if (distance <= radius) {
+								console.log('Checkpoint reached:', checkpoint.text);
+								moveToNextLocation = true; // Set flag to move to next location
+								break; // Exit the loop over checkpoints if a checkpoint is reached
+							}
+						}
+
+						// If a checkpoint is reached in this set, break out of the loop over checkpoint sets
+						if (moveToNextLocation) {
+							break;
 						}
 					}
 
-					// If no checkpoints in the first set are reached, move to the next set
-					if (!moveToNextLocation) {
+					// If a checkpoint is reached, move to the next location
+					if (moveToNextLocation) {
+						moveToNextLocation = false; // Reset moveToNextLocation
 						currentLocationIndex++; // Move to the next location
-						console.log('Next index:', currentLocationIndex);
+					} else {
+						// If no checkpoints in any set are reached, log a message and move to the next location
+						console.log("No checkpoints reached in this location.");
+						currentLocationIndex++; // Move to the next location
 					}
 				}
+
 
 				// If all locations are checked and no checkpoints are reached, log a message
 				if (currentLocationIndex >= locations.length) {
