--- a/index.html
+++ b/index.html
@@ -953,6 +953,8 @@
 								moveToNextLocation = true; // Set flag to move to next location
 								console.log('Move to next location:', moveToNextLocation);
 								break; // Exit the loop over checkpoints if a checkpoint is reached
+							} else {
+								break;
 							}
 						}
 
