--- a/index.html
+++ b/index.html
@@ -920,9 +920,9 @@
 					}
 				}
 
-				let cachedCheckpoints;
-				let moveToNextLocation = false; // Flag to indicate moving to next location
-				let currentLocationIndex = 0; // Initialize index of current location
+			let cachedCheckpoints;
+			let moveToNextLocation = false; // Flag to indicate moving to next location
+			let currentLocationIndex = 0; // Initialize index of current location
 
 			async function checkCheckpoints(latitude, longitude) {
 				console.log("Checking checkpoint");
@@ -931,39 +931,45 @@
 				// Load checkpoints from the JSON file
 				const locations = await fetchJSONFile(checkpointsSource, cachedCheckpoints);
 
-				while (!moveToNextLocation && currentLocationIndex < locations.length) {
-					console.log("Move to next location:" + moveToNextLocation);
+				let currentLocationIndex = 0; // Initialize index of current location
+
+				// Iterate over locations
+				while (currentLocationIndex < locations.length) {
+					console.log("Move to next location: " + currentLocationIndex);
 					const location = locations[currentLocationIndex];
-					console.log("Location: "+location);
-					const checkpoints = location.checkpoints.checkpoint_1;// Get the first set of checkpoints
-					console.log("Checkpoints: "+checkpoints);
+					const checkpoints = location.checkpoints.checkpoint_1; // Get the first set of checkpoints
+
+					// Flag to indicate if a checkpoint is reached
+					let checkpointReached = false;
+
+					// Iterate over checkpoints in the first set
 					for (const checkpoint of checkpoints) {
 						const distance = calculateDistance(latitude, longitude, checkpoint.latitude, checkpoint.longitude);
 						console.log('Checkpoint Latitude:', checkpoint.latitude);
 						console.log('Checkpoint Longitude:', checkpoint.longitude);
 						console.log('Distance:', distance);
+
 						if (distance <= radius) {
 							console.log('Checkpoint reached:', checkpoint.text);
-							moveToNextLocation = true; // Set flag to move to next location
+							checkpointReached = true;
 							break; // Exit the loop if a checkpoint is reached
 						}
 					}
 
-					// If no checkpoints in the first set are reached, move to the next set
-					if (moveToNextLocation) {
+					// If a checkpoint is reached in the first set, move to the next location
+					if (checkpointReached) {
 						currentLocationIndex++; // Move to the next location
-						moveToNextLocation = false;
 					} else {
-						break;
+						break; // Exit the loop if no checkpoint is reached
 					}
 				}
 
 				// If all locations are checked and no checkpoints are reached, log a message
 				if (currentLocationIndex >= locations.length) {
-					console.log("Current location index :"+currentLocationIndex);
-					console.log('No checkpoints reached.');
+					console.log("No checkpoints reached.");
 				}
 			}
+
 
 
 				function setupColors() {
