--- a/index.html
+++ b/index.html
@@ -937,28 +937,37 @@
 				while (currentLocationIndex < locations.length) {
 					console.log("Move to next location: " + currentLocationIndex);
 					const location = locations[currentLocationIndex];
-					const checkpoints = location.checkpoints.checkpoint_1; // Get the first set of checkpoints
+					const checkpointSets = Object.entries(location.checkpoints); // Get all checkpoint sets
 
-					// Flag to indicate if a checkpoint is reached
-					let checkpointReached = false;
+					let checkpointReached = false; // Flag to indicate if a checkpoint is reached
 
-					// Iterate over checkpoints in the first set
-					for (const checkpoint of checkpoints) {
-						const distance = calculateDistance(latitude, longitude, checkpoint.latitude, checkpoint.longitude);
-						console.log('Checkpoint Latitude:', checkpoint.latitude);
-						console.log('Checkpoint Longitude:', checkpoint.longitude);
-						console.log('Distance:', distance);
+					// Iterate over checkpoint sets
+					for (const [checkpointSetName, checkpoints] of checkpointSets) {
+						console.log('Current Checkpoint Set:', checkpointSetName); // Display the name of the current set
 
-						if (distance <= radius) {
-							console.log('Checkpoint reached:', checkpoint.text);
-							checkpointReached = true;
-							break; // Exit the loop if a checkpoint is reached
+						// Iterate over checkpoints within the set
+						for (const checkpoint of checkpoints) {
+							const distance = calculateDistance(latitude, longitude, checkpoint.latitude, checkpoint.longitude);
+							console.log('Checkpoint Latitude:', checkpoint.latitude);
+							console.log('Checkpoint Longitude:', checkpoint.longitude);
+							console.log('Distance:', distance);
+
+							if (distance <= radius) {
+								console.log('Checkpoint reached:', checkpoint.text);
+								checkpointReached = true;
+								break; // Exit the loop over checkpoints if a checkpoint is reached
+							}
+						}
+
+						// If a checkpoint is reached in this set, move to the next set within the same location
+						if (checkpointReached) {
+							break; // Exit the loop over checkpoint sets
 						}
 					}
 
-					// If a checkpoint is reached in the first set, move to the next location
+					// If a checkpoint is reached, stay within the same location to check the next set
 					if (checkpointReached) {
-						currentLocationIndex++; // Move to the next location
+						continue; // Move to the next iteration of the loop (same location)
 					} else {
 						break; // Exit the loop if no checkpoint is reached
 					}
@@ -969,6 +978,7 @@
 					console.log("No checkpoints reached.");
 				}
 			}
+
 
 
 
