--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
 							} else {
 								directionText = "Not moving";
 							}
-							runCheckpointsRepeatedly();
+							runCheckpoints();
 							// Update the HTML element with the direction and distance walked
 							document.getElementById("currentLocation").innerHTML =
 								"<strong><span class='material-icons' style='vertical-align: middle;'>bluetooth</span> Bluetooth:</strong> " + blueToothStatus +
