--- a/index.html
+++ b/index.html
@@ -932,7 +932,7 @@
 				console.log('Locations:', locations);
 
 				// Ensure locations is defined and not empty
-				if (locations && locations.checkpoints.length > 0) {
+				if (locations) {
 					console.log('Number of checkpoints:', locations[0].checkpoints.length);
 					console.log("Last checked index:", lastCheckedIndex);
 
