--- a/index.html
+++ b/index.html
@@ -933,7 +933,7 @@
 
 				// Ensure locations is defined and not empty
 				if (locations) {
-					console.log('Number of checkpoints:', locations[0].checkpoints.length);
+					console.log('Number of checkpoints:', locations.checkpoints.length);
 					console.log("Last checked index:", lastCheckedIndex);
 
 					// Ensure lastCheckedIndex is within bounds
