Everything working up to this point. GPS checkpoints working now

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 		<div id="currentLocation"></div>
 		<!-- Movement>-->
 		<div id="messageDisplayDiv">
-			<button id="dismissButton" onclick="dismissMessage()">Dismiss</button>
+			<button id="dismissButton" class="button" onclick="dismissMessage()">Dismiss</button>
 		</div>
 		<script>
 			//Script for pairing with Avatar_BT
@@ -242,7 +242,7 @@
 								directionText = "Not moving";
 							}
 							checkCheckpoints();
-							// Update the HTML element with the direction and distance walked
+							// Update the HTML element with different navigation variables
 							document.getElementById("currentLocation").innerHTML =
 								"<strong><span class='material-icons' style='vertical-align: middle;'>bluetooth</span> Bluetooth:</strong> " + blueToothStatus +
 								" <strong><span class='material-icons' style='vertical-align: middle;'>place</span> Latitude:</strong> " + latitude +
@@ -276,18 +276,6 @@
 				return distance;
 			}
 			getCurrentLocation();
-
-			// function calculateDistance(lat1, lon1, lat2, lon2) {
-			// 	var R = 6371e3; // metres
-			// 	var φ1 = (lat1 * Math.PI) / 180; // φ, λ in radians
-			// 	var φ2 = (lat2 * Math.PI) / 180;
-			// 	var Δφ = ((lat2 - lat1) * Math.PI) / 180;
-			// 	var Δλ = ((lon2 - lon1) * Math.PI) / 180;
-			// 	var a = Math.sin(Δφ / 2) * Math.sin(Δφ / 2) + Math.cos(φ1) * Math.cos(φ2) * Math.sin(Δλ / 2) * Math.sin(Δλ / 2);
-			// 	var c = 2 * Math.atan2(Math.sqrt(a), Math.sqrt(1 - a));
-			// 	var d = R * c; // in metres
-			// 	return d;
-			// }
 		</script>
 
 		<script type="text/javascript">
@@ -946,7 +934,7 @@
 							// Process checkpoints within the current set
 							for (const checkpoint of checkpoints[currentCheckpointKey]) {
 								const distance = calculateDistance(latitude, longitude, checkpoint.latitude, checkpoint.longitude);
-								console.log('Checkpoint Latitude:', checkpoint.latitude, 'Checkpoint Longitude:', checkpoint.longitude,'Distance:', distance );
+								console.log('Checkpoint Latitude:', checkpoint.latitude, 'Checkpoint Longitude:', checkpoint.longitude,'Distance:', distance.toFixed(2) );
 								//console.log();
 								//console.log('Distance:', distance);
 
