--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 		<!-- Coordinates-->
 		<div id="currentLocation"></div>
 		<!-- Movement>-->
-		<div id="messageDisplayDiv">
+		<div id="messageDisplayDiv" style="display: none;">
 			<button id="dismissButton" class="button" onclick="dismissMessage()">Dismiss</button>
 		</div>
 		<script>
