--- a/index.html
+++ b/index.html
@@ -658,12 +658,14 @@
 
 						// Check if message is not empty to show the overlay
 						messageDisplayDiv.style.display = fullMessage.trim() !== "" ? "block" : "none";
+						dismissButton.style.display = "block"; // Show the Dismiss button
 
 						// Set a timeout to clear the text after 3 seconds or until speaking becomes false
 						var timeoutCallback = function() {
 							if (!speaking) {
 								messageDisplayDiv.textContent = ""; // Clear the text
 								messageDisplayDiv.style.display = "none"; // Hide the overlay after clearing the text
+								dismissButton.style.display = "none"; // Hide the Dismiss button
 							} else {
 								timeoutID = setTimeout(timeoutCallback, 1000); // Check again after 1 second
 							}
