--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
 			let sentenceSource = null;
 			let tagSource = null;
 			let checkpointsSource = 'points.json';
+			var dismissButton = document.getElementById("dismissButton");
 
 			var alert_Sound = new Howl({src: ['audio/alert_high-intensity.mp3'],
 			onloaderror: function(error) {console.error('Error loading audio:', error);},});
